--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/cardcase_db
     username: cardcase
-    password: 143579
+    password: hb030109**
     driver-class-name: com.mysql.cj.jdbc.Driver
 
   jpa:
