--- a/build.gradle
+++ b/build.gradle
@@ -57,10 +57,11 @@ dependencies {
 
     //이메일 인증 기능을 위한 의존성
     implementation 'org.springframework.boot:spring-boot-starter-mail'
-
-
     // 카카오 네이버와 같은 소셜 로그인을 위한
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
+
+    implementation 'com.fasterxml.jackson.core:jackson-databind'
+
 
 }
 
