--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,7 @@
+custom:
+  base-url: http://localhost:8080
+
+
 spring:
   data:
     redis:
@@ -15,6 +19,56 @@ spring:
       ddl-auto: update
     show-sql: true
     database-platform: org.hibernate.dialect.MySQL8Dialect
+
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: 78921833769-ts5djgokl068r6ka8mv76739bkh5b4b1.apps.googleusercontent.com # 발급 받은 Client ID
+            client-secret: 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 # 발급 받은 Client Secret
+            scope: # 기본 값 openid,profile,email => profile, email 로 설정 변경
+              - profile
+              - email
+
+          naver:
+            client-id: wjedbSWU5uGLFcYeoZGq # 발급 받은 Client ID
+            client-secret: A_i8yWLg9a # 발급 받은 Client Secret
+            client-authentication-method: client_secret_post
+            authorization-grant-type: authorization_code
+            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
+            #            scope:
+            #              - name
+            #              - email
+            #              - profile_image
+            client-name: Naver
+
+          kakao:
+            client-id: c94fdfcc5e0a530624039b8fe7c0e250 # 발급 받은 Client ID
+            client-secret: pf1rEg2HQ3KObXMLc4TYSWCjcd1S7fEz # 발급 받은 Client Secret
+            client-authentication-method: client_secret_post
+            authorization-grant-type: authorization_code
+            scope: # https://developers.kakao.com/docs/latest/ko/kakaologin/common#user-info
+              - profile_nickname
+              - profile_image
+
+            redirect-uri: "{baseUrl}/login/oauth2/code/{registrationId}"
+            client-name: Kakao
+
+        provider:
+          naver:
+            authorization-uri: https://nid.naver.com/oauth2.0/authorize
+            token-uri: https://nid.naver.com/oauth2.0/token
+            user-info-uri: https://openapi.naver.com/v1/nid/me
+            user-info-authentication-method: header
+            user-name-attribute: response # Naver 응답 값 resultCode, message, response 중 response 지정
+
+          kakao:
+            authorization-uri: https://kauth.kakao.com/oauth/authorize
+            token-uri: https://kauth.kakao.com/oauth/token
+            user-info-uri: https://kapi.kakao.com/v2/user/me
+            user-info-authentication-method: header
+            user-name-attribute: id # Kakao 응답 값 id, connected_at, properties, kakao_account 중 id 지정
 
 # ✅ 이건 spring 밖에 있어야 함 base64
 jwt:
